<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Desafio</string>
    <string name="title_activity_user_extract">UserExtract</string>
    <string name="btn_enter">Entrar</string>
    <string name="tv_login">Login</string>
    <string name="tv_subtitle">Faça Login para ver seus extratos</string>
    <string name="tv_field1">Campo 1</string>
    <string name="tv_field2" tools:ignore="ExtraTranslation">Campo 2</string>
    <string name="tv_avaible">Disponível</string>
    <string name="tv_limit">Limite</string>
    <string name="tv_util">Utilizado</string>

</resources>
