<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.extract.ExtractActivity">

    <ProgressBar
            android:id="@+id/pbLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rvExtract"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_LineTwo" />

    <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tvLineOne"
            android:layout_width="@dimen/WidthTextLine"
            android:layout_height="@dimen/HeightTextLine"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorLineName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
            android:id="@+id/tvAvaible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_avaible"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorAvaible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLineOne" />

    <TextView
            android:id="@+id/tvLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_limit"
            android:paddingEnd="5dp"
            android:textColor="@color/colorAvaible"
            android:textSize="@dimen/TextLimit"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvLineOne"
            app:layout_constraintEnd_toStartOf="@id/tvLimitValue"/>

    <TextView
            android:id="@+id/tvAvaibleValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:paddingStart="10dp"
            android:textColor="@color/colorAvaibleValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAvaible" />

    <TextView
            android:id="@+id/tvLimitValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorAvaibleValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLineOne" />

    <TextView
            android:id="@+id/tvUtil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="154dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_util"
            android:paddingEnd="10dp"
            android:textColor="@color/colorAvaible"
            android:textSize="@dimen/TextLimit"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvLimit"
            app:layout_constraintEnd_toStartOf="@id/tvUtilValue"/>

    <TextView
            android:id="@+id/tvUtilValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorUtilValue"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLimitValue" />

    <TextView
            android:id="@+id/tv_LineTwo"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="71dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorRow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLineOne" />

</android.support.constraint.ConstraintLayout>